<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Shuffle</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_project">Projects</string>
    <string name="title_context">Contexts</string>
    <string name="title_next_tasks">Next Actions</string>
    <string name="title_due_tasks">Due Actions</string>
    <string name="title_new_task">New action</string>
    <string name="title_edit_task">Edit action</string>
    <string name="title_view_task">View action</string>
    <string name="title_new_project">New project</string>
    <string name="title_edit_project">Edit project</string>
    <string name="title_new_context">New context</string>
    <string name="title_edit_context">Edit context</string>
    <string name="title_task_extras">Action extras</string>
    <string name="title_preferences">General Settings</string>
    <string name="title_preferences_appearance">General Settings > Action appearance</string>
    <string name="title_preferences_clean">General Settings > Clean up</string>
    <string name="title_help">Help</string>
    <string name="title_icon_picker">Choose icon</string>
    <string name="title_colour_picker">Choose color</string>
    <string name="title_calendar">Actions due %s</string>
    <string name="title_project_tasks">Projects > %s</string>
    <string name="title_context_tasks">Contexts > %s</string>
    <string name="shortcut_name">New Action</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_and_add">Save and New</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_complete">Toggle complete</string>
    <string name="menu_move_up">Move up</string>
    <string name="menu_move_down">Move down</string>
    <string name="menu_insert">Add %s</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_view">Perspectives</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_help">Help</string>
    <string name="project_title">Project</string>
    <string name="context_title">Context</string>
    <string name="details_title">Details</string>
    <string name="set_button_title">Set</string>
    <string name="clear_button_title">Clear</string>
    <string name="edit_button_title">Edit</string>
    <string name="extras_button_title">Extra details...</string>
    <string name="save_button_title">Save</string>
    <string name="ok_button_title">OK</string>
    <string name="cancel_button_title">Cancel</string>
	<string name="warning_title">Warning</string>
	<string name="info_title">Information</string>
    <string name="task_name">Action</string>
    <string name="project_name">Project</string>
    <string name="context_name">Context</string>
    <string name="nothing"></string>
    <string name="undefined">None</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="previous_button_title">Previous</string>
    <string name="next_button_title">Next</string>
    <string name="sample_data_title">Demonstration</string>
    <string name="clean_slate_title">Clean slate</string>
    <string name="menu_done">Save</string>
    <string name="menu_doNotSave">Discard changes</string>
    <string name="description_title">Description</string>
    <string name="scheduling_title">Scheduling</string>
    <string name="start_title">Start</string>
    <string name="due_title">Due</string>
    <string name="all_day_title">All day</string>
    <string name="reminders_title">Reminders</string>
    <string name="add_to_gcal_title">Add to Google Calendar</string>
    <string name="add_to_gcal_detail">New entry will load after saving</string>
    <string name="update_gcal_title">Update Google Calendar</string>
    <string name="update_gcal_detail">Updated entry will load after saving</string>
    <string name="completed_title">Completed</string>
    <string name="colour_title">Color</string>
    <string name="archived_title">Archived</string>
    <string name="icon_title">Icon</string>
    <string name="name_title">Name</string>
    <string name="default_context_title">Default context</string>
    <string name="preview_title">Preview</string>
    <string name="day_button_title">Today</string>
    <string name="week_button_title">Next week</string>
    <string name="month_button_title">Next month</string>
    <string name="display_task_list_title">Display in action lists</string>
    <string name="context_icon_title">Context Icon</string>
    <string name="context_name_title">Context Name</string>
    <string name="due_date_title">Due Date</string>
	<string name="layout_preferences">Layout</string>
	<string name="title_project_view_preference">Project View</string>
	<string name="summary_project_view_preference">Display project actions on separate screen</string>
	<string name="title_context_view_preference">Context View</string>
	<string name="summary_context_view_preference">Display context actions on separate screen</string>
	<string name="title_action_appearance_preference">Action appearance</string>
	<string name="summary_action_appearance_preference">Customize display of actions in lists</string>
	<string name="cleanup_preferences">Clean up</string>
	<string name="dialog_title_cleanup_preference">Delete completed actions</string>
	<string name="title_delete_completed_preference">Delete completed actions</string>
	<string name="title_delete_all_preference">Delete everything!</string>
	<string name="summary_delete_all_preference">Remove all actions, projects and custom contexts.</string>
    <string name="delete_completed_button_title">Delete</string>
    <string name="clean_inbox_button_title">Clean up Inbox</string>
    <string name="clean_slate_button_title">Delete</string>
    <string name="itemCreatedToast"><xliff:g id="itemName">%s</xliff:g> created.</string>
    <string name="itemSavedToast"><xliff:g id="itemName">%s</xliff:g> saved.</string>
    <string name="itemDeletedToast"><xliff:g id="itemName">%s</xliff:g> deleted.</string>
    <string name="no_due_date">No due date</string>
    <string name="no_icon">No icon</string>
    <string name="no_tasks">There are no actions to display. Get started by selecting \"Add Action\" from the menu.</string>
    <string name="no_due_tasks">There are no actions due.</string>
    <string name="no_projects">There are no projects to display. Get started by creating actions in the Inbox and assigning them to projects.</string>
    <string name="no_contexts">There are no contexts to display. Get started by creating actions in the Inbox and assigning them to contexts.</string>
    <string name="delete_warning">Are you sure you want to delete the selected %s and it's %d %ss?</string>
    <string name="delete_completed_warning">Delete all completed tasks?</string>
    <string name="clean_slate_warning">Delete <i>all</i> actions, projects and custom contexts?</string>
    <string name="clean_task_message">Deleted %d completed actions.</string>
    <string name="clean_inbox_message">Cleared out actions with projects from Inbox.</string>
    <string name="clean_slate_message">Deleted all actions, projects and custom contexts.</string>
   	<string name="error_title">Error</string>
	<string name="error_message">Error loading action</string>
    <string name="welcome1">
Welcome to Shuffle, a \"Getting Things Done\" inspired personal organization tool.
If you want to see how best to use Shuffle, click \"Demonstration\" to 
load up a bunch of example projects and actions.
Later you can start again by selecting \"Delete all\" from the Settings menu.     
    </string>
    <string name="welcome2">
Or get stuck in straight away with no actions or projects and only the default set of contexts...
    </string>
    <string name="welcome3">
See Help menu for additional instructions and tips.
    </string>
    <string name="help0">
Shuffle is a \"Getting Things Done\" inspired personal organization tool.
It lets you quickly enter and categorize \'actions\'. With 5 supported perspectives,
you can attack your actions any way you please.
\n
A simple elegant workflow encourages you to categorize your actions into projects and optionally provide context.
This structure lets you to break down formidable projects into individual achievable tasks.\n
As a project evolves, clean out old actions as they\'re performed, 
add new actions and reorder any remaining actions depending on your current priorities.
    </string>
    <string name="help1">
This is the best place to add your actions. 
The <b>Inbox</b> is where all actions start off before they are processed.
Try to regularly scan the Inbox, analyzing each action and either discard it, do it or assign it
to a project.\n
Once you\'ve processed the list, select <i>Clean up Inbox</i> from the menu to
clear out all the categorized actions from your Inbox. 
    </string>
    <string name="help2">
The <b>Project</b> perspective lists all your projects, and allows you to drill-down 
into each project to view its actions. In addition to the standard adding, editing and deleting
of actions, the project view also supports rearranging actions in the order you intend to complete them.
\n
Projects, like contexts, can be viewed in two different modes: drill-down or expandable view. 
In drill down mode, clicking on a project takes you to another 
screen showing the actions for that project. In expandable mode, clicking a project shows
its actions on the same screen.
    </string>
    <string name="help3">
<b>Contexts</b> are situations in which you intend to perform actions. Shuffle comes with a few standard contexts to get you started: 
<i>At home</i>, <i>At  work</i>, <i>Online</i>, <i>Errands</i>, <i>Contact</i> and <i>Read</i>. \n
Feel free to modify or delete the existing, or add your own contexts that suit your situation.\n
\n
Like the Projects perspective, contexts can be viewed in either drill-down or expandable mode, configurable via Settings. 
    </string>
    <string name="help4">
<b>Next actions</b> is the best place to look to determine what needs to be done. \n
It shows the first action for each of your projects. 
If you\'ve organized each of your projects actions in the order you intend to complete them, 
this list quickly shows you the most important actions for you could get started on now.
    </string>
    <string name="help5">
<b>Due actions</b> lets you keep track of actions you have given an explicit due date. 
There are 3 views - <i>Today</i>, <i>This Week</i> and 
<i>This Month</i> each showing actions due for the given time scale. 
Overdue actions are shown in all views.
    </string>
    <string name="help6">
A number of aspects of Shuffle are user-configurable. The <b>Settings</b> screen is available from all Perspectives via the menu. \n
<b>List layout</b>  - Show projects and contexts in two screens (drill-down) or in a tree structure (expandable). \n
<b>Action appearance</b> - Lets you custom what information to display for actions in each perspective.  \n
<b>Clean up</b> - Delete completed actions or delete everything. \n
    </string>
    <string name="help7">
Some handy Shuffle features you may not know about:\n
1) In any list view, long press on an item to see a menu of options.\n
2) Hitting the Back button saves before closing.\n
3) Use the <i>Save and New</i> menu to create a bunch of actions in one go.\n
4) You can mark an action as complete by swiping your finger over it in a list.\n
    </string>
</resources>