<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/layout_preferences">
            
        <CheckBoxPreference
                android:key="project_view"
                android:title="@string/title_project_view_preference"
                android:summary="@string/summary_project_view_preference" 
				android:defaultValue="false"                
                />

        <CheckBoxPreference
                android:key="context_view"
                android:title="@string/title_context_view_preference"
                android:summary="@string/summary_context_view_preference" 
				android:defaultValue="true"                
                />
            
        <PreferenceScreen
                android:title="@string/title_action_appearance_preference"
                android:summary="@string/summary_action_appearance_preference">

            <intent android:action="android.intent.action.MAIN" 
                android:targetPackage="org.dodgybits.android.shuffle" 
            	android:targetClass="org.dodgybits.android.shuffle.activity.PreferencesAppearanceActivity" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/cleanup_preferences">

        <PreferenceScreen
                android:title="@string/title_delete_completed_preference">

            <intent android:action="android.intent.action.MAIN" 
                android:targetPackage="org.dodgybits.android.shuffle" 
            	android:targetClass="org.dodgybits.android.shuffle.activity.PreferencesDeleteCompletedActivity" />
        </PreferenceScreen>

        <PreferenceScreen
                android:title="@string/title_delete_all_preference"
                android:summary="@string/summary_delete_all_preference">

            <intent android:action="android.intent.action.MAIN" 
                android:targetPackage="org.dodgybits.android.shuffle" 
            	android:targetClass="org.dodgybits.android.shuffle.activity.PreferencesDeleteAllActivity" />
        </PreferenceScreen>

    </PreferenceCategory>
    
</PreferenceScreen>
