<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	>

<LinearLayout
	android:id="@+id/main" 
    android:orientation="vertical" android:padding="4dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:scrollbars="vertical"    
    style="@style/editor"  
	>

     <EditText android:id="@+id/description"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"	        
        android:hint="@string/description_title"
           style="@style/editable_text"
           >
        <requestFocus />
    </EditText>

    <AutoCompleteTextView android:id="@+id/project"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_title"
        android:maxLength="20"
        style="@style/autocomplete_text"
       />

    <AutoCompleteTextView android:id="@+id/context"
        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
        android:hint="@string/context_title"
           android:maxLength="20"
           style="@style/autocomplete_text"
          />

    <EditText android:id="@+id/details"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:hint="@string/details_title"
        android:lines="2"
        style="@style/editable_text"
           />    
        
    <TextView android:id="@+id/due_date_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5px"
        android:paddingRight="5px"
        style="@style/text"            
        />

	<LinearLayout 
		android:orientation="horizontal" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
           android:layout_column="1"
           >
	    <Button android:id="@+id/due_date_set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_button_title"
            />

	    <Button android:id="@+id/due_date_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_button_title"
            />
	</LinearLayout>			

    <CheckBox android:id="@+id/completed_checkbox"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_column="1"
           android:text="@string/completed_title"
           style="@style/text"            
           />        
						
</LinearLayout>			

</ScrollView>
