<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:padding="4dip"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    >

	<TableRow>
        
        <LinearLayout
			android:id="@+id/appearance_layout" 
    		android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_span="2"
			style="@style/list">
		</LinearLayout>
        
        
	</TableRow>
	
	<TableRow>
        
        <LinearLayout
    		android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="1px"
			android:layout_span="2"
			android:background="@drawable/box">
		</LinearLayout>
            
        	
	</TableRow>	
	
	<TableRow>
	    <TextView
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
			android:layout_span="2"
			android:paddingTop="10px"
	        android:text="@string/display_task_list_title"
            style="@style/label"
	        />
	</TableRow>	

	<TableRow
        android:paddingTop="8px">	        
	        
	    <CheckBox android:id="@+id/display_context"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/context_name_title"
		    />

	    <CheckBox android:id="@+id/display_due_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/due_date_title"
	    />

	</TableRow>	

	<TableRow
        android:paddingTop="5px"
	>	        

	    <CheckBox android:id="@+id/display_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/context_icon_title"
	    />


	    <CheckBox android:id="@+id/display_project"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/project_title"
	    />
	</TableRow>	

	<TableRow
        android:paddingTop="5px"
	>	        

	    <CheckBox android:id="@+id/display_details"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/details_title"
	    />

    </TableRow>
			
</TableLayout>

