<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android" 
        android:orientation="vertical"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
	    <Button android:id="@+id/day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_button_title"
            />

	    <Button android:id="@+id/week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week_button_title"
            />

	    <Button android:id="@+id/month_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month_button_title"
            />
		
	</LinearLayout>

    <ListView android:id="@+id/android:list"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:drawSelectorOnTop="false"
              style="@style/list"  
              android:layout_weight="10"         
              />

    <TextView android:id="@+id/android:empty"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              android:text="@string/no_due_tasks"
              style="@style/text"                
              />
              
</LinearLayout>
