<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

	<TableLayout
	    android:orientation="vertical" 
	    android:padding="4dip"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:stretchColumns="1"
	    >
	
	    <TableRow
	        style="@style/centered_row"
	        android:paddingTop="5px"
	        >
		    <TextView
		        android:layout_width="wrap_content" android:layout_height="wrap_content"
		        android:layout_weight="0"
	            style="@style/label"
		        android:text="@string/name_title"
		        />
		    <EditText android:id="@+id/name"
		        android:layout_width="fill_parent" android:layout_height="wrap_content"	        
		        android:layout_weight="1"
		        android:hint="@string/initial_text"
	            style="@style/editable_text"
	            android:maxLength="20"
	            >
		        <requestFocus />
		    </EditText>
		</TableRow>
	
		<TableRow
	        style="@style/centered_row"
	        android:paddingTop="12px"
	        >
	        
		    <TextView
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
	            style="@style/label"
		        android:text="@string/default_context_title"/>
	
		    <Spinner android:id="@+id/default_context"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:drawSelectorOnTop="true"
		        android:nextFocusDown="@+id/save_button"
		    />
	    </TableRow>
				
	</TableLayout>

	<LinearLayout 
	  	android:orientation="horizontal"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    >
	
	    <Button android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_title"
            />

	    <Button android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button_title"
            />
            
   	</LinearLayout>
	
</RelativeLayout>