<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        style="@style/label"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/start_date"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="left|center_vertical"/>

        <Button android:id="@+id/start_time"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="left|center_vertical"/>

    </LinearLayout>

    <TextView android:id="@+id/due_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_title"
        style="@style/label"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/due_date"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="left|center_vertical"/>

        <Button android:id="@+id/due_time"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="left|center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:paddingBottom="5dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_day_title"
            android:paddingTop="1dip"
            android:paddingRight="7dip"
            style="?android:attr/textAppearanceMedium"/>
        <CheckBox android:id="@+id/is_all_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:paddingRight="1dip"/>
    </LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:paddingLeft="5px"
		android:paddingRight="5px" android:text="@string/reminders_title"
		style="@style/label" />

</LinearLayout>
